infra/manifests/fenix.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fenix
  labels:
    name: fenix
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fenix-deployment
  namespace: fenix
  labels:
    app: fenix
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fenix
  template:
    metadata:
      labels:
        app: fenix
    spec:
      containers:
        - name: fenix
          image: 780690093991.dkr.ecr.us-east-1.amazonaws.com/fenix:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: fenix-nodeport-service
  namespace: fenix
  labels:
      app: fenix
spec:
  type: NodePort
  selector:
      app: fenix
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-fenix
  namespace: fenix
  labels:
    app: fenix
  annotations:
    external-dns.alpha.kubernetes.io/hostname: fenixqa.tech
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: fenix
    #kubernetes.io/ingress.class: "alb" (OLD INGRESS CLASS NOTATION - STILL WORKS BUT RECOMMENDED TO USE IngressClass Resource) # Additional Notes: https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.3/guide/ingress/ingress_class/#deprecated-kubernetesioingressclass-annotation
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:780690093991:certificate/403a8e2e-6e08-4c4d-8c3d-ccfe15ee32c9
spec:
  ingressClassName: alb
  defaultBackend:
    service:
      name: fenix-nodeport-service
      port:
        number: 8000
  rules:
    - host: fenixqa.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fenix-nodeport-service
                port:
                  number: 8000
